# Saxion_Y2Q1_Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Asteroid.cpp  Asteroid.h  DrawableRenderer.cpp  DrawableRenderer.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  EngineCallbacks.h  Entity.cpp  Entity.h  InputHelper.cpp  InputHelper.h  Math.cpp  Math.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Resources.h  Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  Time.h  Update.h  main.cpp
src/components/: Asteroid.h  GameOverScreen.cpp  GameOverScreen.h  ParticleSystem.cpp  Player.h  Rigidbody.h
src/engine/: Actor.cpp  Actor.h  Behavior.cpp  Behavior.h  Component.cpp  Component.h  DrawableRenderer.cpp  DrawableRenderer.h  Engine.cpp  Engine.h  EntitiesView.cpp  EntitiesView.h  Entity.cpp  Entity.h  EntityRegistry.h  MyMath.cpp  MyMath.h  ParticleSystem.cpp  ParticleSystem.h  State.h  System.cpp  System.h  Time.cpp
src/engine/actor/: Actor.cpp  Actor.h  ActorDecl.h  Behavior.cpp  Behavior.h  BehaviorSystem.h
src/engine/components/: Destroy.h  DestroyTimer.h  Transformable.cpp  Transformable.h
src/engine/core/: ComponentPool.cpp  ComponentPool.h  Entities.cpp  Entities.h  EntitiesView.h  Entity.h  EntityRegistry.cpp  EntityRegistry.h  SparseSet.cpp  SparseSet.h
src/engine/core/events/: EntityEvents.h  Receiver.h
src/engine/events/: Collision.h  Receiver.h
src/engine/resources/: Resource.h
src/engine/systems/: PhysicsSystem.cpp  PhysicsSystem.h  PlayerDeathSystem.cpp  PlayerDeathSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h  TransformableHierarchySystem.cpp  TransformableHierarchySystem.h
src/engine/utils/: CustomTypeIndex.cpp  CustomTypeIndex.h  MyMath.cpp  MyMath.h
src/factory/: AsteroidFactory.cpp  BulletFactory.cpp  Factory.h  MainLevelFactory.cpp  PlayerFactory.cpp
src/misc/: Flicker.h  FlickerSystem.h
src/systems/: BreakAsteroidSystem.cpp  BreakAsteroidSystem.h  DestroyByTimerSystem.cpp  DestroyByTimerSystem.h  DiagnosticsSystem.cpp  DiagnosticsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerControlsSystem.cpp  PlayerControlsSystem.h  PlayerDeathSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  ScoreSystem.h  ShootSystem.cpp  ShootSystem.h  WrapAroundScreenSystem.cpp  WrapAroundScreenSystem.h
src/utils/: Physics.h
